Freedom Sanbox Ant Deploy/src/objects/Goal_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goal Profiles</relationshipLabel>
        <relationshipName>Goal_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bonds_Allocation__c</fullName>
        <label>Bonds Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Debt_Allocation__c</fullName>
        <label>Debt Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Equity_Allocation__c</fullName>
        <label>Equity Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Goal_Profile_Type__c</fullName>
        <label>Goal Profile Type</label>
        <picklist>
            <controllingField>Risk_Type__c</controllingField>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gold_allocation__c</fullName>
        <label>Gold allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Returns68__c</fullName>
        <description>calculates maximum returns for confidential interval 68</description>
        <formula>( Return__c+Risk__c )*100</formula>
        <label>Maximum Returns68</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Returns95__c</fullName>
        <formula>( Return__c+(2*Risk__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Returns95</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumReturns68__c</fullName>
        <description>this field calculates minimum returns based on confidence interval 68</description>
        <formula>( Return__c-Risk__c )*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinimumReturns68</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumReturns95__c</fullName>
        <formula>( Return__c-(2*Risk__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinimumReturns95</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <description>This formula field calculates return based on the asset allocation and expected returns for that asset</description>
        <formula>(Equity_Allocation__c * 14+ Debt_Allocation__c *7+ Gold_allocation__c *10)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_expected__c</fullName>
        <formula>(( 34* Equity_Allocation__c ) /100) + (( 25* Debt_Allocation__c ) /100) + (( 50* Gold_allocation__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Returns_expected__c</fullName>
        <label>Returns expected</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <description>this field calculates risk based on asset allocation and standarad deviation</description>
        <formula>(SQRT( (Equity_Allocation__c ^ 2 )*( 32^ 2) +( Debt_Allocation__c ^ 2)*(5.5 ^ 2)+( Gold_allocation__c ^ 2)*(13 ^ 2)+ (2*Equity_Allocation__c*32*Debt_Allocation__c *5.5*0.3)+(2*Equity_Allocation__c*32*Gold_allocation__c*13*0)+ (2*Debt_Allocation__c *5.5*Gold_allocation__c*13*0))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Goal Profile</label>
    <nameField>
        <label>Goal Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>